<resources>
    <string name="app_name">Weather Application SOSM</string>
    <string name="humidity">Humidity (%)</string>
    <string name="_00_00_am">00:00 AM</string>
    <string name="wind">Wind (m/s)</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="pressure">Pressure (hPa)</string>
    <string name="maxTemp">Max Temp</string>
    <string name="minTemp">Min Temp</string>
</resources>
